# Process-Activity-Firewall

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  connection.h  headers.h  intercept.c  listener.c  logs.json
include/: headers.h  headers.hpp
include/trie/: trie.h  trie.hpp  vector.h
src/: CMakeLists.txt  intercept.c  intercept.cpp  listener.c  listener.cpp  utilites.c  utilites.cpp
src/cwalk/: cwalk.c
src/trie/: trie.c  trie.cpp  vector.c
